--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,42 @@
+.Map {
+  height: 100vh;
+  width: 100vw;
+  margin: auto;
+}
 .App {
   text-align: center;
+  width: 100%;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.picto-musee {
+  max-width: 100%
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App .title h4 {
+  margin-bottom: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.title {
+  margin-bottom: 0.5rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section {
+  max-height: 200px;
+  overflow: hidden;
+  margin-bottom: 0.5rem;
+}
+.left-50, .right-50 {
+  width: 50%;
+  display:inline-block;
+  vertical-align: top;
+}
+.left-50 > img {
+  margin-top: 0.1rem;
+}
+p.description {
+  margin-top: 0;
+  margin-left: 0.5rem;
+  white-space: pre-wrap;
+}
+p.description:first-letter {
+  text-transform:capitalize;
+}
+.leaflet-popup-content {
+  width: 360px !important;
 }
